gobmkida/c1/compute_eyes_pessimistic
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/optics.c:1268:7: error: conflicting types for 'compute_eyes_pessimistic'
void  compute_eyes_pessimistic( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/liberty.h:989:6: note: previous declaration is here
void compute_eyes_pessimistic(int pos, struct eyevalue *value,
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/optics.c:1420:56: error: use of undeclared identifier 'eyevalue_to_string_result'; did you mean 'eyevalue_to_string'?
gprintf( " graph matching - %s, pessimistic_min=%d\n", eyevalue_to_string_result, ( unsigned int)*pessimistic_min); 
                                                       ^~~~~~~~~~~~~~~~~~~~~~~~~
                                                       eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/liberty.h:1017:7: note: 'eyevalue_to_string' declared here
char *eyevalue_to_string(struct eyevalue *e);
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/optics.c:1433:51: error: use of undeclared identifier 'eyevalue_to_string_result'; did you mean 'eyevalue_to_string'?
gprintf( " guess_eye - %s, pessimistic_min=%d\n", eyevalue_to_string_result, ( unsigned int)*pessimistic_min); 
                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~
                                                  eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/liberty.h:1017:7: note: 'eyevalue_to_string' declared here
char *eyevalue_to_string(struct eyevalue *e);
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/optics.c:1492:50: error: too many arguments to function call, expected 2, have 3
v37 = gg_normalize_float2int( v34, 0.0099999998, a9); 
      ~~~~~~~~~~~~~~~~~~~~~~                     ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/include/gg_utils.h:52:1: note: 'gg_normalize_float2int' declared here
int gg_normalize_float2int(float x, float a);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/engine/optics.c:1493:50: error: too many arguments to function call, expected 2, have 3
v38 = gg_normalize_float2int( v30, 0.0099999998, a9); 
      ~~~~~~~~~~~~~~~~~~~~~~                     ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/include/gg_utils.h:52:1: note: 'gg_normalize_float2int' declared here
int gg_normalize_float2int(float x, float a);
^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/compute_eyes_pessimistic/src/obj/1/optics.o] Error 1
